--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "babel-helper-builder-idom-jsx",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "",
   "repository": "https://github.com/AlexPikalov/babel-helper-builder-idom-jsx",
   "license": "MIT",
   "main": "lib/index.js",
   "dependencies": {
     "babel-runtime": "^6.9.0",
-    "babel-types": "^6.9.0",
-    "esutils": "^2.0.0",
-    "lodash": "^4.2.0"
+    "babel-types": "^6.9.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.10.1",
+    "babel-preset-es2015": "^6.9.0"
   }
 }
